# STOSP

./: .gitignore  README.md
.github/workflows/: backend.yml  (+3 more)
Backend/: Cargo.toml  diesel.toml
Backend/configs/: app.dhall
Backend/crates/common/: Cargo.toml
Backend/crates/common/src/tools/: contants.rs  mod.rs  session_utils.rs  utils.rs
Backend/crates/driver/: Cargo.toml  diesel.toml
Backend/crates/driver/migrations/2024-05-01-125352_initial-queries/: up.sql
Backend/crates/driver/migrations/2024-05-01-125647_create-role-type/: up.sql
Backend/crates/driver/shape_files/: bengaluru.json
Backend/crates/driver/src/: main.rs  types.rs
Backend/crates/driver/src/db/: schema.rs
Backend/crates/driver/src/handlers/auth/: auth.rs  auth_verify.rs
Backend/crates/driver/src/routes/: auth.rs  routes.rs
Backend/crates/driver/src/storage/: mod.rs
Backend/crates/user/: Cargo.toml  diesel.toml
Backend/crates/user/migrations/2024-03-03-043630_create_auth_table/: down.sql
Backend/crates/user/migrations/2024-03-03-051935_add_token_field/: up.sql
Backend/crates/user/migrations/2024-03-15-131532_create_user_table/: down.sql  up.sql
Backend/crates/user/migrations/2024-03-17-064742_add_role_in_auth/: down.sql
Backend/crates/user/migrations/2024-05-01-100047_switch-schema/: down.sql  up.sql
Backend/crates/user/src/db/: schema.rs
Backend/crates/user/src/handlers/: mod.rs
Backend/crates/user/src/routes/: mod.rs  serviceability.rs  session.rs
Backend/crates/user/src/storage/: result.rs
Backend/migrations/2023-12-14-160200_create_auth_table/: up.sql
Backend/migrations/2023-12-20-034917_create_user_table/: down.sql  up.sql
Backend/migrations/2024-03-03-043630_create_auth_table/: up.sql
Backend/migrations/2024-03-03-051935_add_token_field/: down.sql
Backend/migrations/2024-03-03-052716_alter_time_Stamp/: down.sql  up.sql
Backend/migrations/2024-03-17-064742_add_role_in_auth/: up.sql
Backend/migrations/2024-03-19-141300_remove-session-token/: down.sql  up.sql
Backend/src/: main.rs  types.rs
Backend/src/db/: database.rs  schema.rs
Backend/src/handlers/: auth.rs  mod.rs
Backend/src/handlers/auth/: auth.rs  auth_verify.rs  mod.rs
Backend/src/handlers/error_handler/: common_error_handler.rs  mod.rs
Backend/src/handlers/geometry/: mod.rs  serviceability.rs
Backend/src/handlers/user/: design.md
Backend/src/models/: auth.rs
Backend/src/routes/: auth.rs  mod.rs  routes.rs  serviceability.rs  session.rs
Backend/src/storage/: mod.rs  result.rs
Backend/src/storage/models/: auth.rs  geometry.rs  mod.rs  user.rs
Backend/src/storage/queries/: auth.rs  user.rs
Backend/src/tools/: contants.rs  mod.rs  session_utils.rs  types.rs  utils.rs
Backend/src/tools/polygon_utils/: geo_json.rs
Backend/src/transformers/: auth.rs
Backend/src/utils/: utils.rs
(+69 files in other folders)
