[package]
name = "stosp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-rt = "2.8.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
env_logger = "0.11.1"
lazy_static = "1.4"
listenfd = "1.0.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
rand = "0.8"
futures = "0.3.26"
futures-util = "0.3.26"
futures-macro = "0.3.26"
chacha20poly1305 = "0.10.1"
base64 = "0.22.0"
jsonwebtoken = "9.2.0"
serde_dhall ="0.12.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
cargo-watch = "8.5.2"
cargo-run-script = "0.2.0"


[package.metadata.scripts]
start = "cargo watch -x run"
goodbye = "echo Goodbye"
install = "cargo install --path . --force"