[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
chrono = { version = "0.4", features = ["serde"] } 
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
geo = { version = "0.28.0", features = ["use-serde"] }
geojson = { version = "0.24.1", features = ["geo-types"] }
jsonwebtoken = "9.3.0"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
log = "0.4"