[package]
name = "driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
lazy_static = "1.4"
listenfd = "1.0.1"
log = "0.4"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
r2d2 = "0.8.10"
rand = "0.8.5"
futures = "0.3.30"
futures-util = "0.3.30"
futures-macro = "0.3.30"
chacha20poly1305 = "0.10.1"
base64 = "0.22.0"
jsonwebtoken = "9.3.0"
serde_dhall ="0.12.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
cargo-watch = "8.5.2"
cargo-run-script = "0.2.0"
geo = { version = "0.28.0", features = ["use-serde"] }
geojson = { version = "0.24.1", features = ["geo-types"] }
common = { path = "../common" }

[package.metadata.scripts]
start = "cargo watch -x run"
goodbye = "echo Goodbye"
install = "cargo install --path . --force"

